# OpenCv_ROS

./: CMakeLists.txt  README.md  package.xml
launch/: opencv.launch
script/: basler_cam.py  basler_coclea_pos_det.py  basler_coclea_record.py  basler_vid_record.py  basler_vid_record2.py  camera_hsv_color_bar_basler.py  coclea_backgroun_mask3.py  coclea_backgroun_mask3_ros.py  coclea_model_class.py  coclea_mr_detect.py  coclea_mr_detect3_costf2.py  coclea_rod_large.py  coclea_ros.py  coclea_ros2.py  coclea_ros3.py  coclea_ros5.py  coclea_ros6.py  coclea_ros7.py  coclea_ros8.py  coclea_ros9.py  coclea_ros_pos_detect.py  des_angle_coclea.py  des_pos_coclea.py  des_pos_coclea_model.py  des_pos_coclea_model2.py  des_pos_coclea_model3.py  model_prediction.py  video_record_coclea.py
src/: opencv_node.cpp
